<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_stable_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="theo.combelles@gmail.com">Théo Combelles</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  
  <depend>tf2</depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>

  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
