<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_lyapunov_stable_controller</name>
  <version>0.1.0</version>
  <description>Lyapunov Stable Controller</description>
  <maintainer email="theo.combelles@gmail.com">Théo Combelles</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>tf2</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>

  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

